eoullim-Project/src/main/java/org/example/eoullimback/_common/error/exception/Exception404.java
package org.example.eoullimback._common.error.exception;

public class Exception404 extends RuntimeException {
    public Exception404(String msg) {
        super(msg);
    }

}
